<resources>
    <string name="app_name">AndroidM</string>

    <string name="hello_world">Hello world!</string>
    <string name="data_binding">Data binding</string>
    <string name="applinks">App Links</string>
    <string name="coordinator_layout">Coordinator Layout</string>
    <string name="direct_share">Direct Share</string>
    <string name="fab">FAB</string>
    <string name="material_edit_text">Material Edit Text</string>
    <string name="observable_binding">Observable binding</string>
    <string name="permissions">Permissions</string>
    <string name="snackbar">Snackbar</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="vector_drawable">Vector Drawable</string>
</resources>
